--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
   <head>
     <!-- Meta and Link Tags -->
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" >
     <title>Niccolò Machiavelli</title>
-    <link href="assets/css/style.css" rel="stylesheet" />
-    <meta content="Welcome to the Machiavellian Summit." name="description" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <link href="assets/css/style.css" rel="stylesheet" >
+    <meta content="Welcome to the Machiavellian Summit." name="description" >
+    <meta content="width=device-width, initial-scale=1" name="viewport" >
     <!--Favicons-->
     <link
       href="assets/images/images_desktop/logo.svg"
       rel="icon"
       type="image/svg+xml"
-    />
+      aria-label="logo"
+    >
   </head>
 
   <body>
@@ -33,7 +34,7 @@
         </svg>
       </a>
       <!-- Nav -->
-      <input id="menu-toggle" type="checkbox" />
+      <input id="menu-toggle" type="checkbox" >
       <label for="menu-toggle" id="menu-icon">☰</label>
       <nav id="nav-menu">
         <ul>
@@ -54,7 +55,7 @@
         <!-- Quotes -->
         <div class="quote" id="quote1">
           <p>
-            "I'm not interested in preserving the status quo;<br />
+            "I'm not interested in preserving the status quo;<br>
             I want to overthrow it"
           </p>
         </div>
@@ -64,7 +65,7 @@
       <section id="video-section">
         <div class="quote" id="quote2">
           <p>
-            "Where the willingness is great,<br />
+            "Where the willingness is great,<br>
             the difficulties cannot be great."
           </p>
         </div>
@@ -78,9 +79,9 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             style="display: block; margin: auto"
           ></iframe>
-          <link rel="preconnect" href="https://www.youtube.com" />
+          <link rel="preconnect" href="https://www.youtube.com">
           <!-- Preconnect to YouTube's domain -->
-          <link rel="preconnect" href="https://www.gstatic.com" />
+          <link rel="preconnect" href="https://www.gstatic.com">
           <!-- Preconnect to related domain -->
         </div>
         <div class="quote" id="quote3">
@@ -156,6 +157,7 @@
             <a
               href="https://www.amazon.co.uk/Mandrake-Niccolo-Machiavelli/dp/0822207281"
               target="_blank"
+              aria-label="link to purchase book on amazon, opens in new tab"
             >
               <img
                 loading="lazy"
@@ -167,6 +169,7 @@
               <a
                 href="https://www.amazon.co.uk/Mandrake-Niccolo-Machiavelli/dp/0822207281"
                 target="_blank"
+                aria-label="link to purchase book on amazon, opens in new tab"
                 >The Mandrake</a
               >
             </h2>
@@ -175,6 +178,7 @@
             <a
               href="https://www.amazon.com/Clizia-Niccolo-Machiavelli/dp/0881339024"
               target="_blank"
+              aria-label="link to purchase book on amazon, opens in new tab"
             >
               <img
                 loading="lazy"
@@ -186,6 +190,7 @@
               <a
                 href="https://www.amazon.com/Clizia-Niccolo-Machiavelli/dp/0881339024"
                 target="_blank"
+                aria-label="link to purchase book on amazon, opens in new tab"
                 >The Clizia</a
               >
             </h2>
@@ -194,6 +199,7 @@
             <a
               href="https://www.scribd.com/doc/115172438/Machiavelli-Niccolo-The-Golden-Ass-The-chief-works-and-others-Ed-Allan-H-Gilbert-Vol-2-Durham-Duke-University-Press-1965#"
               target="_blank"
+              aria-label="link to purchase book on amazon, opens in new tab"
             >
               <img
                 loading="lazy"
@@ -205,6 +211,7 @@
               <a
                 href="https://www.scribd.com/doc/115172438/Machiavelli-Niccolo-The-Golden-Ass-The-chief-works-and-others-Ed-Allan-H-Gilbert-Vol-2-Durham-Duke-University-Press-1965#"
                 target="_blank"
+                aria-label="link to purchase book on scribd, opens in new tab"
                 >The Ass</a
               >
             </h2>
@@ -213,6 +220,7 @@
             <a
               href="https://www.amazon.com/Florentine-Histories-Translated-Niccol%C3%B2-Machiavelli/dp/0691055211"
               target="_blank"
+              aria-label="link to purchase book on amazon, opens in new tab"
             >
               <img
                 loading="lazy"
@@ -224,6 +232,7 @@
               <a
                 href="https://www.amazon.com/Florentine-Histories-Translated-Niccol%C3%B2-Machiavelli/dp/0691055211"
                 target="_blank"
+                aria-label="link to purchase book on amazon, opens in new tab"
                 >The Florentine Histories</a
               >
             </h2>
@@ -232,17 +241,20 @@
             <a
               href="https://www.amazon.com/Letters-Machiavelli-Selection-Niccolo/dp/0226500411"
               target="_blank"
+              aria-label="link to purchase book on amazon, opens in new tab"
             >
               <img
                 loading="lazy"
                 alt="The Letters"
                 src="assets/images/images_mobile/letters.webp"
+                aria-label="link to purchase book on amazon, opens in new tab"
               />
             </a>
             <h2>
               <a
                 href="https://www.amazon.com/Letters-Machiavelli-Selection-Niccolo/dp/0226500411"
                 target="_blank"
+                aria-label="link to purchase book on amazon, opens in new tab"
                 >The Letters</a
               >
             </h2>
@@ -257,7 +269,7 @@
     <footer id="site-footer">
       <ul id="footer-nav">
         <li>
-          <a class="footer-link" href="index.html"
+          <a class="footer-link" href="index.html" aria-label="link to home page"
             ><i class="fa-solid fa-house"></i
           ></a>
           <a
@@ -265,6 +277,7 @@
             href="https://www.facebook.com/"
             rel="noopener"
             target="_blank"
+            aria-label="link to facebook page, opens in new tab"
             ><i class="fa-brands fa-facebook"></i
           ></a>
           <a
@@ -272,6 +285,7 @@
             href="https://twitter.com/home"
             rel="noopener"
             target="_blank"
+            aria-label="link to twitter page, opens in new tab"
             ><i class="fa-brands fa-twitter"></i
           ></a>
           <a
@@ -279,6 +293,7 @@
             href="https://youtu.be/IdRxHTih-28"
             rel="noopener"
             target="_blank"
+            aria-label="link to youtube page, opens in new tab"
             ><i class="fa-brands fa-youtube"></i
           ></a>
         </li>
