--- a/biography.html
+++ b/biography.html
@@ -4,17 +4,18 @@
   <head>
     <!-- Meta and Link Tags -->
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" >
     <title>Niccolò Machiavelli</title>
-    <link href="assets/css/style.css" rel="stylesheet" />
-    <meta content="Welcome to the Machiavellian Summit." name="description" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <link href="assets/css/style.css" rel="stylesheet" >
+    <meta content="Welcome to the Machiavellian Summit." name="description" >
+    <meta content="width=device-width, initial-scale=1" name="viewport" >
     <!--Favicons-->
     <link
       href="assets/images/images_desktop/logo.svg"
       rel="icon"
       type="image/svg+xml"
-    />
+      aria-label="logo"
+    >
   </head>
   <body>
     <header>
@@ -272,11 +273,10 @@
       </section>
     </main>
   </body>
-  <!--Footer-->
   <footer id="site-footer-bio">
     <ul id="footer-nav">
       <li>
-        <a class="footer-link" href="index.html"
+        <a class="footer-link" href="index.html" aria-label="link to home page"
           ><i class="fa-solid fa-house"></i
         ></a>
         <a
@@ -284,6 +284,7 @@
           href="https://www.facebook.com/"
           rel="noopener"
           target="_blank"
+          aria-label="link to facebook page, opens in new tab"
           ><i class="fa-brands fa-facebook"></i
         ></a>
         <a
@@ -291,6 +292,7 @@
           href="https://twitter.com/home"
           rel="noopener"
           target="_blank"
+          aria-label="link to twitter page, opens in new tab"
           ><i class="fa-brands fa-twitter"></i
         ></a>
         <a
@@ -298,11 +300,18 @@
           href="https://youtu.be/IdRxHTih-28"
           rel="noopener"
           target="_blank"
+          aria-label="link to youtube page, opens in new tab"
           ><i class="fa-brands fa-youtube"></i
         ></a>
       </li>
     </ul>
   </footer>
+  <!--Font Awesome Kit-->
+  <script
+    crossorigin="anonymous"
+    src="https://kit.fontawesome.com/752275c1b1.js"
+  ></script>
+</body>
   <!--Font Awesome Kit-->
   <script
     crossorigin="anonymous"
