final fixes and adding images to readme

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <!-- Meta and Link Tags -->
-    <meta charset="utf-8" />
+    <meta charset="utf-8" >
     <meta content="width=device-width, initial-scale=1.0" name="viewport" >
     <title>Niccolò Machiavelli</title>
     <link href="assets/css/style.css" rel="stylesheet" >
@@ -14,7 +14,6 @@
       href="assets/images/images_desktop/logo.svg"
       rel="icon"
       type="image/svg+xml"
-      aria-label="logo"
     >
   </head>
 
@@ -70,6 +69,7 @@
           </p>
         </div>
         <div class="video">
+          <h1>THE PRINCE</h1>
           <iframe
             loading="lazy"
             height="400"
@@ -86,8 +86,8 @@
         </div>
         <div class="quote" id="quote3">
           <p>
-            "The first method for <br />
-            estimating the intelligence of a <br />ruler is to look at the men
+            "The first method for <br>
+            estimating the intelligence of a <br>ruler is to look at the men
             he has around him."
           </p>
         </div>
@@ -105,7 +105,7 @@
                 loading="lazy"
                 alt="The Prince"
                 src="assets/images/images_mobile/theprince.webp"
-              />
+              >
             </a>
             <h2>
               <a
@@ -124,7 +124,7 @@
                 loading="lazy"
                 alt="Discourses on the First Ten Books of Titus Livius"
                 src="assets/images/images_mobile/discourses.webp"
-              />
+              >
             </a>
             <h2>
               <a
@@ -143,7 +143,7 @@
                 loading="lazy"
                 alt="The Art of War"
                 src="assets/images/images_mobile/art-of-war.webp"
-              />
+              >
             </a>
             <h2>
               <a
@@ -163,7 +163,7 @@
                 loading="lazy"
                 alt="The Mandrake"
                 src="assets/images/images_mobile/Mandrake.webp"
-              />
+              >
             </a>
             <h2>
               <a
@@ -184,7 +184,7 @@
                 loading="lazy"
                 alt="The Clizia"
                 src="assets/images/images_mobile/clizia.webp"
-              />
+              >
             </a>
             <h2>
               <a
@@ -205,7 +205,7 @@
                 loading="lazy"
                 alt="The Ass"
                 src="assets/images/images_mobile/ASS-poem.webp"
-              />
+              >
             </a>
             <h2>
               <a
@@ -226,7 +226,7 @@
                 loading="lazy"
                 alt="The Florentine Histories"
                 src="assets/images/images_mobile/florentine.webp"
-              />
+              >
             </a>
             <h2>
               <a
@@ -248,7 +248,7 @@
                 alt="The Letters"
                 src="assets/images/images_mobile/letters.webp"
                 aria-label="link to purchase book on amazon, opens in new tab"
-              />
+              >
             </a>
             <h2>
               <a
@@ -261,7 +261,7 @@
           </div>
         </div>
         <div class="quote" id="quote4">
-          <p>"Never was anything great achieved <br />without danger."</p>
+          <p>"Never was anything great achieved <br>without danger."</p>
         </div>
       </section>
     </main>
