fix footer positioning issues

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Niccolò Machiavelli</title>
     <link href="assets/css/style.css" rel="stylesheet" >
     <meta content="Welcome to the Machiavellian Summit." name="description" >
-    <meta content="width=device-width, initial-scale=1" name="viewport" >
     <!--Favicons-->
     <link
       href="assets/images/images_desktop/logo.svg"
@@ -20,7 +19,7 @@
   <body>
     <!-- header -->
     <header>
-      <a href="index.html">
+      <a title="link to home page" href="index.html">
         <svg
           id="logo-svg"
           viewbox="0 0 448 512"
@@ -47,7 +46,7 @@
     </header>
     <!-- Main -->
     <main>
-      <section style="height: 50vh">
+      <section>
         <div class="heading-container">
           <h1 id="heading">NICCOLO MACHIAVELLI</h1>
         </div>
@@ -98,6 +97,8 @@
         <div class="works-container">
           <div class="work">
             <a
+            noopener="true"
+            rel="noopener"
               href="https://www.kobo.com/ie/en/ebook/the-prince-13"
               target="_blank"
             >
@@ -109,6 +110,8 @@
             </a>
             <h2>
               <a
+                noopener="true"
+                rel="noopener"
                 href="https://www.kobo.com/ie/en/ebook/the-prince-13"
                 target="_blank"
                 >The Prince</a
@@ -117,6 +120,8 @@
           </div>
           <div class="work">
             <a
+            noopener="true"
+            rel="noopener"
               href="https://www.amazon.com/Discourses-Livy-Niccolo-Machiavelli/dp/0226500365"
               target="_blank"
             >
@@ -128,6 +133,8 @@
             </a>
             <h2>
               <a
+              noopener="true"
+              rel="noopener"
                 href="https://www.amazon.com/Discourses-Livy-Niccolo-Machiavelli/dp/0226500365"
                 target="_blank"
                 >Discourses on the First Ten Books of Titus Livius</a
@@ -136,6 +143,8 @@
           </div>
           <div class="work">
             <a
+            noopener="true"
+            rel="noopener"
               href="https://press.uchicago.edu/ucp/books/book/chicago/A/bo3632018.html"
               target="_blank"
             >
@@ -147,6 +156,8 @@
             </a>
             <h2>
               <a
+              noopener="true"
+              rel="noopener"
                 href="https://press.uchicago.edu/ucp/books/book/chicago/A/bo3632018.html"
                 target="_blank"
                 >The Art of War</a
@@ -155,6 +166,8 @@
           </div>
           <div class="work">
             <a
+            noopener="true"
+            rel="noopener"
               href="https://www.amazon.co.uk/Mandrake-Niccolo-Machiavelli/dp/0822207281"
               target="_blank"
               aria-label="link to purchase book on amazon, opens in new tab"
@@ -167,6 +180,8 @@
             </a>
             <h2>
               <a
+              noopener="true"
+              rel="noopener"
                 href="https://www.amazon.co.uk/Mandrake-Niccolo-Machiavelli/dp/0822207281"
                 target="_blank"
                 aria-label="link to purchase book on amazon, opens in new tab"
@@ -176,6 +191,8 @@
           </div>
           <div class="work">
             <a
+            noopener="true"
+            rel="noopener"
               href="https://www.amazon.com/Clizia-Niccolo-Machiavelli/dp/0881339024"
               target="_blank"
               aria-label="link to purchase book on amazon, opens in new tab"
@@ -188,6 +205,8 @@
             </a>
             <h2>
               <a
+              noopener="true"
+              rel="noopener"
                 href="https://www.amazon.com/Clizia-Niccolo-Machiavelli/dp/0881339024"
                 target="_blank"
                 aria-label="link to purchase book on amazon, opens in new tab"
@@ -197,6 +216,8 @@
           </div>
           <div class="work">
             <a
+            noopener="true"
+            rel="noopener"
               href="https://www.scribd.com/doc/115172438/Machiavelli-Niccolo-The-Golden-Ass-The-chief-works-and-others-Ed-Allan-H-Gilbert-Vol-2-Durham-Duke-University-Press-1965#"
               target="_blank"
               aria-label="link to purchase book on amazon, opens in new tab"
@@ -209,6 +230,8 @@
             </a>
             <h2>
               <a
+              noopener="true"
+              rel="noopener"
                 href="https://www.scribd.com/doc/115172438/Machiavelli-Niccolo-The-Golden-Ass-The-chief-works-and-others-Ed-Allan-H-Gilbert-Vol-2-Durham-Duke-University-Press-1965#"
                 target="_blank"
                 aria-label="link to purchase book on scribd, opens in new tab"
@@ -218,6 +241,8 @@
           </div>
           <div class="work">
             <a
+            noopener="true"
+            rel="noopener"
               href="https://www.amazon.com/Florentine-Histories-Translated-Niccol%C3%B2-Machiavelli/dp/0691055211"
               target="_blank"
               aria-label="link to purchase book on amazon, opens in new tab"
@@ -230,6 +255,8 @@
             </a>
             <h2>
               <a
+              noopener="true"
+              rel="noopener"
                 href="https://www.amazon.com/Florentine-Histories-Translated-Niccol%C3%B2-Machiavelli/dp/0691055211"
                 target="_blank"
                 aria-label="link to purchase book on amazon, opens in new tab"
@@ -239,6 +266,8 @@
           </div>
           <div class="work">
             <a
+            noopener="true"
+            rel="noopener"
               href="https://www.amazon.com/Letters-Machiavelli-Selection-Niccolo/dp/0226500411"
               target="_blank"
               aria-label="link to purchase book on amazon, opens in new tab"
@@ -252,6 +281,8 @@
             </a>
             <h2>
               <a
+              noopener="true"
+              rel="noopener"
                 href="https://www.amazon.com/Letters-Machiavelli-Selection-Niccolo/dp/0226500411"
                 target="_blank"
                 aria-label="link to purchase book on amazon, opens in new tab"
