fix styling issues on signup page and fix issues with html validation

--- a/biography.html
+++ b/biography.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <!-- Meta and Link Tags -->
-    <meta charset="utf-8" />
+    <meta charset="utf-8" >
     <meta content="width=device-width, initial-scale=1.0" name="viewport" >
     <title>Niccolò Machiavelli</title>
     <link href="assets/css/style.css" rel="stylesheet" >
@@ -14,7 +14,6 @@
       href="assets/images/images_desktop/logo.svg"
       rel="icon"
       type="image/svg+xml"
-      aria-label="logo"
     >
   </head>
   <body>
@@ -31,7 +30,7 @@
           ></path>
         </svg>
       </a>
-      <input id="menu-toggle" type="checkbox" />
+      <input id="menu-toggle" type="checkbox" >
       <label for="menu-toggle" id="menu-icon">☰</label>
       <nav id="nav-menu">
         <ul>
@@ -49,7 +48,7 @@
           <img
             alt="Niccolò Machiavelli"
             src="assets/images/images_mobile/VELI-5.webp"
-          />
+          >
         </div>
         <div class="dates">
           <div class="born">
@@ -272,7 +271,6 @@
         </div>
       </section>
     </main>
-  </body>
   <footer id="site-footer-bio">
     <ul id="footer-nav">
       <li>
@@ -312,9 +310,4 @@
     src="https://kit.fontawesome.com/752275c1b1.js"
   ></script>
 </body>
-  <!--Font Awesome Kit-->
-  <script
-    crossorigin="anonymous"
-    src="https://kit.fontawesome.com/752275c1b1.js"
-  ></script>
 </html>
