--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <!-- Meta and Link Tags -->
-    <meta charset="utf-8" />
+    <meta charset="utf-8" >
     <meta content="width=device-width, initial-scale=1.0" name="viewport" >
     <title>Niccolò Machiavelli</title>
     <link href="assets/css/style.css" rel="stylesheet" >
@@ -14,7 +14,6 @@
       href="assets/images/images_desktop/logo.svg"
       rel="icon"
       type="image/svg+xml"
-      aria-label="logo"
     >
   </head>
   <body>
@@ -31,7 +30,7 @@
           ></path>
         </svg>
       </a>
-      <input id="menu-toggle" type="checkbox" />
+      <input id="menu-toggle" type="checkbox" >
       <label for="menu-toggle" id="menu-icon">☰</label>
       <nav id="nav-menu">
         <ul>
@@ -70,7 +69,7 @@
             placeholder="(Name)"
             required=""
             type="text"
-          />
+          >
           <label for="surname">Surname:</label>
           <input
             id="surname"
@@ -78,7 +77,7 @@
             placeholder="(Surname)"
             required=""
             type="text"
-          />
+          >
           <label for="email">Email Address:</label>
           <input
             id="email"
@@ -86,11 +85,12 @@
             placeholder="(Email Address)"
             required=""
             type="email"
-          />
+          >
           <button type="submit">Sign Up</button>
         </form>
       </section>
       <section class="map-container">
+        <h2>Location</h2>
         <iframe
           allowfullscreen=""
           height="450"
